// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentsHeader renders without props 1`] = `
<div
  className="comments-header"
>
  <h4>
     Comments
  </h4>
  <Button
    as="button"
    basic={true}
    icon={true}
    labelPosition="left"
  >
    <Icon
      as="i"
      name="align left"
    />
    Sort By
  </Button>
</div>
`;

exports[`CommentsHeader renders without props 2`] = `
<div
  className="comments-header"
>
  <h4>
    505050
     Comments
  </h4>
  <Button
    as="button"
    basic={true}
    icon={true}
    labelPosition="left"
  >
    <Icon
      as="i"
      name="align left"
    />
    Sort By
  </Button>
</div>
`;
